Add photos and change the text color and skin

--- a/_sass/hamilton/skins/daylight.scss
+++ b/_sass/hamilton/skins/daylight.scss
@@ -1,4 +1,4 @@
-$text-color:            #111 !default;
+$text-color:            #0a5000 !default;
 $text-color-light:      #666 !default;
 $background-color:      #fff !default;
 $code-background-color: #f8f8f8 !default;
