--- a/_sass/hamilton/skins/sunrise.scss
+++ b/_sass/hamilton/skins/sunrise.scss
@@ -1,4 +1,4 @@
-$text-color:            #222 !default;
+$text-color:            #0a5000 !default;
 $text-color-light:      #373737 !default;
 $background-color:      #ecdbbb !default;
 $code-background-color: #fbf1c7 !default;
